Added basic styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-<h1>Welcome to my website!</h1>
-<p>It's currently being reworked at the moment, so please come back in the future!</p>
-<img src="img/roxy_prof.png" alt="Roxy"></img>
-<p>This is Roxy.</p>
+<head>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to my website!</h1>
+    </header>
+    <main>
+        <p>It's currently being reworked at the moment, so please come back in the future!</p>
+        <img src="img/roxy_prof.png" alt="Roxy"></img>
+        <p>This is Roxy.</p>
+    </main>
+</body>
