Added my resume to the page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <p>It's currently being reworked at the moment, so please come back in the future!</p>
         <img src="img/roxy_prof.png" alt="Roxy"></img>
         <p>This is Roxy.</p>
+        <p>My old resume! <a href="/files/JamesRobinsResume.pdf">Resume</a>.</p>
     </main>
 </body>
