--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
+
     <header>
         <h1>Welcome to my website!</h1>
+
+        <div class="topnav">
+            <a class="active" href="/index.html">Home</a>
+            <a href="/projects.html">Projects</a>
+            <a href="https://github.com/jahames">Github</a>
+            <a href="https://letterboxd.com/zomombi">Letterboxd</a>
+            <a href="/blog.html">Blog</a>
+        </div> 
     </header>
+
     <main>
         <p>It's currently being reworked at the moment, so please come back in the future!</p>
         <img src="img/roxy_prof.png" alt="Roxy"></img>
         <p>This is Roxy.</p>
         <p>My old resume! <a href="/files/JamesRobinsResume.pdf">Resume</a>.</p>
     </main>
+
 </body>
