Modified page titles

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-        <h1>Look What I Can Do!</h1>
+        <h1>Look what I can do!</h1>
 
         <div class="topnav">
             <a class="active" href="/index.html">Home</a>
