--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-        <h1>Ruminations On The World!</h1>
+        <h1>Ruminations on the World!</h1>
 
         <div class="topnav">
             <a class="active" href="/index.html">Home</a>
