Added a browser icon Added a bash script to write a blog post to the website based on some variables and a template file

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,8 @@
 
 <head>
     <link rel="stylesheet" href="/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <link rel="icon" href="http://example.com/favicon.png"> 
 </head>
 
 <body>
@@ -20,10 +21,12 @@
     </header>
 
     <main>
-        <p>It's currently being reworked at the moment, so please come back in the future!</p>
-        <img src="img/roxy_prof.png" alt="Roxy"></img>
-        <p>This is Roxy.</p>
-        <p>My old resume! <a href="/files/JamesRobinsResume.pdf">Resume</a>.</p>
+        <ul>
+            <li>
+                <a href="/articles/My First Blog Post!.html">My First Blog Post! - Oct 25 2021</a>
+            </li>
+
+        </ul>
     </main>
 
 </body>
