--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,11 @@
     <main>
         <ul>
             <li>
+                <a href="/articles/Blog Post Bash Script!.html">Blog Post Bash Script! - Oct 25 2021</a>
+            </li>
+        
+
+            <li>
                 <a href="/articles/My First Blog Post!.html">My First Blog Post! - Oct 25 2021</a>
             </li>
 
