Updated picture to Webp and added yt link to it

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <p>It's currently being reworked at the moment, so please come back in the future!</p>
-        <img src="img/roxy_prof.png" alt="Roxy"></img>
+        <a href="https://www.youtube.com/watch?v=tBf3_PMAcV0"><img src="img/roxy_prof.webp" alt="Roxy"></img></a>
         <p>This is Roxy.</p>
         <p>My old resume! <a href="/files/JamesRobinsResume.pdf">Resume</a>.</p>
     </main>
