Added page for UQPool Project

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
 <head>
     <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="http://example.com/favicon.png">
+    <link rel="icon" href="/img/roxy_prof.png">
+    <title>James Robins' Website</title>
 </head>
 
 <body>
@@ -21,10 +22,11 @@
     </header>
 
     <main>
-        <p>It's currently being reworked at the moment, so please come back in the future!</p>
-        <img src="img/roxy_prof.png" alt="Roxy"></img>
-        <p>This is Roxy.</p>
-        <p>My old resume! <a href="/files/JamesRobinsResume.pdf">Resume</a>.</p>
+        <ul>
+            <li>
+                <a href="/projects/UQPool.html">UQPool - A carpooling app for the University of Queensland</a>
+            </li>
+        </ul>
     </main>
 
 </body>
