--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,8 @@
 <head>
     <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <link rel="icon" href="http://example.com/favicon.png"> 
+    <link rel="icon" href="/img/roxy_prof.png">
+    <title>James Robins' Website</title> 
 </head>
 
 <body>
