--- a/projects/UQPool.html
+++ b/projects/UQPool.html
@@ -47,7 +47,7 @@
         </p>
 
         <h2>Our Promotional Video!</h2>
-        <video controls="controls" width="600px">
+        <video controls="controls">
             <source src="/files/videos/Kickstarter UQPool.mp4" type="video/mp4">
         </video>
 
