Updated the UQPool page

--- a/projects/UQPool.html
+++ b/projects/UQPool.html
@@ -39,11 +39,27 @@
         </p>
         <p>On future projects I also wish to set up CICD pipelines with automatic cloud deployment. 
             Dealing with Git merge-hell is not a fun experience, especially with inexperienced devs like
-            those on this project. 
+            those on this project. Azure won't give me a free trial though, and AWS has a terrible UI... I
+            might have to go with GCP. GCP has the smallest market share though, so there's an argument against
+            it there. I've been using smaller cloud providers for my projects, I might set up a Gitea or Gitlab 
+            instance with Jenkins. I'd be a qualified Devops engineer then.
+
         </p>
-        <p>As the team leader I also took on the responsibilities of presenting our app at an Expo and
-            at a mid-project evaluation. I also took charge of producing any videos, like the Kickstarter
-            seen above. Overall it was a very good experience, and I got to do a lot of cool things.
+        <p>As the team leader I also took on the responsibilities of presenting our app at a course 
+            tradeshow and at a mid-project evaluation. I also took charge of producing any videos, 
+            like the promotional video seen below. Overall it was a very good experience, and I got to do a lot of cool things.
+
+        </p>
+        <p>I'd like to thank my team members also. I learnt a lot from Nathan Hettige and am really grateful
+            for all his hardwork throughout the semester. I'd like to thank my old friends from highschool, Bob Melham
+            and Reggie Bladen. Bob took on a lot of the more theoretical aspects of this project, such as 
+            pairing riders and drivers. I'd like to thank Reggie as well, he tried his best throughout the semester
+            and seriously improved. I'd also like to thank Yuma Decaux, a blind engineer, for being an inspiration
+            and life mentor. Thanks to Yujun Li as well for being a part of the team, and doing the important design work.
+            Thanks to everyone in the team for putting up with my inexperience with managing software projects, in the future
+            it's all going to go swimmingly. I swear. 
+        </p>
+        <p>-James Robins
         </p>
 
         <h2>Our Promotional Video!</h2>
@@ -55,6 +71,9 @@
         <img src="../img/Team Wilson Love.webp"></image>
         <p>Left to Right: Bobby Melhem, James Robins, Nathan Hettige, Reggie Bladen.</p>
         <p>Missing: Yuma Decaux, Yujun Li.</p>
+
+        </br>   
+        <p>I would link the Github repo here, but I'm not sure if I'm allowed to.</p>
 
 
     </main>
