A late halloween image on the home page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <p>It's currently being reworked at the moment, so please come back in the future!</p>
         <a href="https://www.youtube.com/watch?v=tBf3_PMAcV0"><img src="img/roxy_prof.webp" alt="Roxy"></img></a>
         <p>This is Roxy.</p>
+
+        <img src="img/skeleton.gif" alt="Skeleton"></img>
+        <p>Happy Halloween!</p>
+
         <p>My old resume! <a href="/files/JamesRobinsResume.pdf">Resume</a>.</p>
     </main>
 
