Added Wikitrivia to the projects page

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,9 @@
             <li>
                 <a href="/projects/UQPool.html">UQPool - A carpooling app for the University of Queensland</a>
             </li>
+            <li>
+                <a href="/projects/Wikitrivia.html">Wikitrivia - A Wikipedia trivia generator for the UQCS 2021 Hackathon</a>
+            </li>
         </ul>
     </main>
 
