Added a link for wikitrivia to play it

--- a/projects/Wikitrivia.html
+++ b/projects/Wikitrivia.html
@@ -42,6 +42,8 @@
         </p>
 
         <p>Repository: <a href="https://github.com/jahames/Wikitrivia">Here</a></p>
+        <p>Play it: <a href="https://Wikitrivia.xyz">Here</a></p>
+
 
         <p>-James Robins
         </p>
