Fixed styling on project pages

--- a/projects/UQPool.html
+++ b/projects/UQPool.html
@@ -68,7 +68,7 @@
         </video>
 
         <h2>A Picture of the Team!</h2>
-        <img src="../img/Team Wilson Love.webp"></image>
+        <img src="../img/Team Wilson Love.webp"></img>
         <p>Left to Right: Bobby Melhem, James Robins, Nathan Hettige, Reggie Bladen.</p>
         <p>Missing: Yuma Decaux, Yujun Li.</p>
 
