--- a/projects/Wikitrivia.html
+++ b/projects/Wikitrivia.html
@@ -49,13 +49,13 @@
         </p>
 
         <h2>Team Pictures!</h2>
-        <img src="../img/uqcs-hack-2021-3.webp"></image>
+        <img src="../img/uqcs-hack-2021-3.webp"></img>
         <p>Left to right: Yash, Chase, James</p>
 
-        <img src="../img/uqcs-hack-2021-1.webp"></image>
+        <img src="../img/uqcs-hack-2021-1.webp"></img>
         <p>Left to right: Chase, Connor, Yash, Linden (a spy from another team), James</p>
 
-        <img src="../img/uqcs-hack-2021-2.webp"></image>
+        <img src="../img/uqcs-hack-2021-2.webp"></img>
         <p>Left to right: Connor, James, Yash, Chase</p>
 
     </main>
